[package]
name = "tin-actix-api-resp"
version = "0.1.1"
edition = "2024"
authors = ["唐加彬 me@tangjiabin.cn"]
description = "A library for handling API responses in Actix-web applications"
license = "MIT"
repository = "https://github.com/JiabinTang/tin-actix-api-resp"
homepage = "https://github.com/JiabinTang/tin-actix-api-resp"
readme = "README.md"

[lib]
name = "tin_actix_api_resp"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0", optional = true }
sea-orm = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tin-redis-conn = { version = "0.1.3", registry = "tin-crates-io", optional = true }

[features]
default = ["redis"]
sea-orm = ["dep:sea-orm"]
chrono = ["dep:chrono"]
redis = ["dep:tin-redis-conn"]
serde_json = ["dep:serde_json"]
full = ["sea-orm", "chrono", "redis", "serde_json"]
